adding annotated papers from 712

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -44,6 +44,7 @@
 \marginnote{Papers under \\Submission And \\Working Papers} 
 \textit{Recommendations Using Coupled Matrix Factorization}, Evangelos Papalexakis, Abhinav Jauhri. PAKDD 2014, Tainan, Taiwan. Submitted in October, 2013. \vspace*{2mm} \\
 \textit{Measuring Client Device Behavior on the Modern Web}, Erik Reed, Abhinav Jauhri. NIPS 2013. Submitted in October, 2013. \\
+\textit{ }
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Professional \\Employment} \textbf{Software Engineer}, Salesforce.com Inc., San Francisco, CA, (September, 2011 - July, 2012)
 \begin{itemize}
