--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -39,9 +39,10 @@
 \textbf{Narsee Monjee University}, Mumbai, India. \\ B.Tech. in Computer Engineering, 2010. \\
 \noindent\rule{6in}{0.4pt}  \\[4pt]
 \marginnote{Research \\Interests} 
-\noindent My interests lie in the areas of systems, machine learning and optimization. Specifically, I am interested in applying optimization techniques with applications to computer system design. \\
+\noindent Seeking for a summer internship in a research lab in areas of systems, machine learning or optimization. \\
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Papers under \\Submission And \\Working Papers} 
+\textit{Comparitive Study of Antenna Placement Optimization Algorithms}, Abhinav Jauhri, Jason Lohn. GECCO 2014. \vspace*{2mm} \\
 \textit{Recommendations Using Coupled Matrix Factorization}, Evangelos Papalexakis, Abhinav Jauhri. PAKDD 2014, Tainan, Taiwan. Submitted in October, 2013. \vspace*{2mm} \\
 \textit{Measuring Client Device Behavior on the Modern Web}, Erik Reed, Abhinav Jauhri. NIPS 2013. Submitted in October, 2013. \\
 \textit{ }
@@ -123,11 +124,11 @@ Formulated course, \textbf{How to Write Fast Code (18-645)}, Carnegie Mellon Uni
 \end{itemize}
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Graduate \\Coursework}
-Stochastic Optimization by \href{https://www.cmu.edu/silicon-valley/faculty-staff/lohn-jason.html}{\UrlFont Jason Lohn} \vspace*{2mm} \\  
-Analytical Performance Modeling \& Design of Computer System by \href{https://www.cs.cmu.edu/~harchol/Perfclass/class12fall.html}{\UrlFont Mor Harchol-Balter}  \vspace*{2mm} \\
-Machine Learning by \href{http://alex.smola.org/teaching/cmu2013-10-701/}{\UrlFont Alex Smola \& Barnabas Poczos}  \vspace*{2mm} \\
-Graduate Algorithms by \href{https://www.cs.cmu.edu/~mblum/}{\UrlFont Manuel Blum}  \vspace*{2mm} \\
-Advanced and Distributed Operating Systems by \href{https://www.cs.cmu.edu/~15712/}{\UrlFont Hui Zhang}
+Stochastic Optimization (18-879) by \href{https://www.cmu.edu/silicon-valley/faculty-staff/lohn-jason.html}{\UrlFont Jason Lohn} \vspace*{2mm} \\  
+Analytical Performance Modeling \& Design of Computer System (15-857) by \href{https://www.cs.cmu.edu/~harchol/Perfclass/class12fall.html}{\UrlFont Mor Harchol-Balter}\vspace*{2mm} \\
+Machine Learning (10-701) by \href{http://alex.smola.org/teaching/cmu2013-10-701/}{\UrlFont Alex Smola \& Barnabas Poczos}  \vspace*{2mm} \\
+Graduate Algorithms (15-750) by \href{https://www.cs.cmu.edu/~mblum/}{\UrlFont Manuel Blum}  \vspace*{2mm} \\
+Advanced and Distributed Operating Systems (15-712) by \href{https://www.cs.cmu.edu/~15712/}{\UrlFont Hui Zhang}
 
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Systems \\Experience} 
@@ -136,6 +137,7 @@ Scripting Languages: Python, bash, Javascript \vspace*{2mm} \\
 RDBMS Language: SQL \vspace*{2mm} \\  
 DBMS: DB2, Oracle 9i, MySQL, SQLite \vspace*{2mm} \\ 
 Presentation technologies: HTML, \LaTeX \\
+\clearpage
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Selected \\Honors}
 Carnegie Institute of Technology Dean's Tuition Fellowship for academic year 2012 - 13. \vspace*{2mm} \\
