--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -42,7 +42,7 @@
 \noindent Seeking for a summer internship in a research lab in areas of systems, machine learning or optimization. \\
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Papers under \\Submission And \\Working Papers} 
-\textit{Comparitive Study of Antenna Placement Optimization Algorithms}, Abhinav Jauhri, Jason Lohn. GECCO 2014. \vspace*{2mm} \\
+\textit{Comparative Study of Antenna Placement Optimization Algorithms}, Abhinav Jauhri, Jason Lohn. GECCO 2014. \vspace*{2mm} \\
 \textit{Recommendations Using Coupled Matrix Factorization}, Evangelos Papalexakis, Abhinav Jauhri. PAKDD 2014, Tainan, Taiwan. Submitted in October, 2013. \vspace*{2mm} \\
 \textit{Measuring Client Device Behavior on the Modern Web}, Erik Reed, Abhinav Jauhri. NIPS 2013. Submitted in October, 2013. \\
 \textit{ }
