adding lua example

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -143,6 +143,6 @@ Presentation technologies: HTML, \LaTeX \\
 Carnegie Institute of Technology Dean's Tuition Fellowship for academic year 2012 - 13. \vspace*{2mm} \\
 Head of Editorial Board at Narsee Monjee University for academic year 2009 - 10. \vspace*{2mm} \\
 \noindent Member of a team which was amongst best 20 teams selected fromm all over India by IBM at their annual competition, Great Mind Challenge, 2008. \vspace*{2mm} \\
-Chairperson of the Student Branck of Computer Society of India (CSI) at Narsee Monjee University for academic year 2007 - 08.  \vspace*{2mm} \\
+Chairperson of the Student Branch of Computer Society of India (CSI) at Narsee Monjee University for academic year 2007 - 08.  \vspace*{2mm} \\
 College prefect at La Martiniere College, Lucknow, India for academic year 2005 - 06.
 \end{document}
