removed nips paper

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -43,9 +43,7 @@
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Papers under \\Submission And \\Working Papers} 
 \textit{Comparative Study of Antenna Placement Optimization Algorithms}, Abhinav Jauhri, Jason Lohn. GECCO 2014. \vspace*{2mm} \\
-\textit{Recommendations Using Coupled Matrix Factorization}, Evangelos Papalexakis, Abhinav Jauhri. PAKDD 2014, Tainan, Taiwan. Submitted in October, 2013. \vspace*{2mm} \\
-\textit{Measuring Client Device Behavior on the Modern Web}, Erik Reed, Abhinav Jauhri. NIPS 2013. Submitted in October, 2013. \\
-\textit{ }
+\textit{Recommendations Using Coupled Matrix Factorization}, Evangelos Papalexakis, Abhinav Jauhri. PAKDD 2014, Tainan, Taiwan. Submitted in October, 2013. \\
 \noindent\rule{6in}{0.4pt} \\[4pt]
 \marginnote{Professional \\Employment} \textbf{Software Engineer}, Salesforce.com Inc., San Francisco, CA, (September, 2011 - July, 2012)
 \begin{itemize}
